# xdr

./: .gitignore  example.xdr  xdr.cabal  xdr.x  xdr.y
src/Codec/Binary/: XDR.hs
src/Codec/Binary/XDR/: Format.hs  Get.hs  Put.hs  QQ.hs  TH.hs
src/Codec/Binary/XDR/Format/: QQ.hs
src/Language/: XDR.hs
src/Language/XDR/: Lexer.hs  ParseMonad.hs  Parser.hs  Pretty.hs  Syntax.hs  TH.hs
tests/: TH.hs
