name:                   xdr
version:                0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <james.cook@usma.edu>
maintainer:             James Cook <james.cook@usma.edu>
license:                PublicDomain
homepage:               http://code.haskell.org/~mokus/xdr

category:               Serialization
synopsis:               XDR (eXternal Data Representation)
description:            XDR (eXternal Data Representation) is a simple
                        standardized language for describing binary data
                        encodings.  This library provides an implementation
                        of the data model and encoding/decoding functions.
                        In future releases it may also include a parser and
                        quasiquoter for the schema language.

Library
  hs-source-dirs:       src
  exposed-modules:      Codec.Binary.XDR
                        Codec.Binary.XDR.Get
                        Codec.Binary.XDR.Put
                        Codec.Binary.XDR.Format
  build-depends:        base >= 3 && < 5, 
                        binary, 
                        bytestring,
                        bytestring-class,
                        data-binary-ieee754
