name:                   xdr
version:                0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <james.cook@usma.edu>
maintainer:             James Cook <james.cook@usma.edu>
license:                PublicDomain
homepage:               http://code.haskell.org/~mokus/xdr

category:               Serialization
synopsis:               XDR (eXternal Data Representation)
description:            XDR (eXternal Data Representation) is a simple
                        standardized language for describing binary data
                        encodings.  This library provides an implementation
                        of the data model and encoding/decoding functions, as
                        well as a parser and pretty-printer for the language.
                        
                        There is also a very rudimentary quasiquoter which 
                        allows declaration of simple XDR formats inline in 
                        Haskell code.  This feature will likely be expanded
                        later, but the current interface is simple enough
                        that any future work will be a proper extension of it.

Library
  hs-source-dirs:       src
  exposed-modules:      Codec.Binary.XDR
                        Codec.Binary.XDR.Get
                        Codec.Binary.XDR.Put
                        Codec.Binary.XDR.Format
                        Codec.Binary.XDR.Format.QQ
                        Language.XDR
                        Language.XDR.TH

  other-modules:        Language.XDR.Lexer
                        Language.XDR.ParseMonad
                        Language.XDR.Parser
                        Language.XDR.Pretty
                        Language.XDR.Syntax
                        
  build-depends:        base >= 3 && < 5, 
                        array,
                        binary, 
                        bytestring,
                        bytestring-class,
                        containers,
                        data-binary-ieee754,
                        monad-loops,
                        pretty,
                        prettyclass,
                        template-haskell
